add_executable(benchmark__0001.refterm__filebuf_file.cc filebuf_file.cc)
add_test(benchmark__0001.refterm__filebuf_file.cc benchmark__0001.refterm__filebuf_file.cc)
add_executable(benchmark__0001.refterm__fpipe.cc fpipe.cc)
add_test(benchmark__0001.refterm__fpipe.cc benchmark__0001.refterm__fpipe.cc)
add_executable(benchmark__0001.refterm__fstream.cc fstream.cc)
add_test(benchmark__0001.refterm__fstream.cc benchmark__0001.refterm__fstream.cc)
add_executable(benchmark__0001.refterm__iostream.cc iostream.cc)
add_test(benchmark__0001.refterm__iostream.cc benchmark__0001.refterm__iostream.cc)
add_executable(benchmark__0001.refterm__out_buf.cc out_buf.cc)
add_test(benchmark__0001.refterm__out_buf.cc benchmark__0001.refterm__out_buf.cc)
add_executable(benchmark__0001.refterm__stdio.cc stdio.cc)
add_test(benchmark__0001.refterm__stdio.cc benchmark__0001.refterm__stdio.cc)
add_executable(benchmark__0001.refterm__stdio_hack.cc stdio_hack.cc)
add_test(benchmark__0001.refterm__stdio_hack.cc benchmark__0001.refterm__stdio_hack.cc)
