add_executable(benchmark.0001.refterm.filebuf_file ${CMAKE_CURRENT_LIST_DIR}/filebuf_file.cc)
add_test(benchmark.0001.refterm.filebuf_file benchmark.0001.refterm.filebuf_file)
add_executable(benchmark.0001.refterm.fpipe ${CMAKE_CURRENT_LIST_DIR}/fpipe.cc)
add_test(benchmark.0001.refterm.fpipe benchmark.0001.refterm.fpipe)
add_executable(benchmark.0001.refterm.fstream ${CMAKE_CURRENT_LIST_DIR}/fstream.cc)
add_test(benchmark.0001.refterm.fstream benchmark.0001.refterm.fstream)
add_executable(benchmark.0001.refterm.iostream ${CMAKE_CURRENT_LIST_DIR}/iostream.cc)
add_test(benchmark.0001.refterm.iostream benchmark.0001.refterm.iostream)
add_executable(benchmark.0001.refterm.out_buf ${CMAKE_CURRENT_LIST_DIR}/out_buf.cc)
add_test(benchmark.0001.refterm.out_buf benchmark.0001.refterm.out_buf)
add_executable(benchmark.0001.refterm.stdio ${CMAKE_CURRENT_LIST_DIR}/stdio.cc)
add_test(benchmark.0001.refterm.stdio benchmark.0001.refterm.stdio)
add_executable(benchmark.0001.refterm.stdio_hack ${CMAKE_CURRENT_LIST_DIR}/stdio_hack.cc)
add_test(benchmark.0001.refterm.stdio_hack benchmark.0001.refterm.stdio_hack)
