add_executable(c_file_unlocked_tsc c_file_unlocked_tsc.cc)
add_test(c_file_unlocked_tsc c_file_unlocked_tsc)
add_executable(iobuf_file_tsc iobuf_file_tsc.cc)
add_test(iobuf_file_tsc iobuf_file_tsc)
add_executable(stdio_tsc stdio_tsc.cc)
add_test(stdio_tsc stdio_tsc)
include(${CMAKE_CURRENT_LIST_DIR}/1mtime/CMakeLists.txt)
include(${CMAKE_CURRENT_LIST_DIR}/longspaces/CMakeLists.txt)
include(${CMAKE_CURRENT_LIST_DIR}/random/CMakeLists.txt)
include(${CMAKE_CURRENT_LIST_DIR}/time/CMakeLists.txt)
