include(${CMAKE_CURRENT_LIST_DIR}/1mtime)
add_executable(benchmark__0002.file_io_tsc__c_file_unlocked_tsc.cc c_file_unlocked_tsc.cc)
add_test(benchmark__0002.file_io_tsc__c_file_unlocked_tsc.cc benchmark__0002.file_io_tsc__c_file_unlocked_tsc.cc)
add_executable(benchmark__0002.file_io_tsc__iobuf_file_tsc.cc iobuf_file_tsc.cc)
add_test(benchmark__0002.file_io_tsc__iobuf_file_tsc.cc benchmark__0002.file_io_tsc__iobuf_file_tsc.cc)
include(${CMAKE_CURRENT_LIST_DIR}/longspaces)
include(${CMAKE_CURRENT_LIST_DIR}/random)
add_executable(benchmark__0002.file_io_tsc__stdio_tsc.cc stdio_tsc.cc)
add_test(benchmark__0002.file_io_tsc__stdio_tsc.cc benchmark__0002.file_io_tsc__stdio_tsc.cc)
include(${CMAKE_CURRENT_LIST_DIR}/time)
