include(${CMAKE_CURRENT_LIST_DIR}/1mtime/CMakeLists.txt)
add_executable(benchmark.0002.file_io_tsc.c_file_unlocked_tsc ${CMAKE_CURRENT_LIST_DIR}/c_file_unlocked_tsc.cc)
add_test(benchmark.0002.file_io_tsc.c_file_unlocked_tsc benchmark.0002.file_io_tsc.c_file_unlocked_tsc)
add_executable(benchmark.0002.file_io_tsc.iobuf_file_tsc ${CMAKE_CURRENT_LIST_DIR}/iobuf_file_tsc.cc)
add_test(benchmark.0002.file_io_tsc.iobuf_file_tsc benchmark.0002.file_io_tsc.iobuf_file_tsc)
include(${CMAKE_CURRENT_LIST_DIR}/longspaces/CMakeLists.txt)
include(${CMAKE_CURRENT_LIST_DIR}/random/CMakeLists.txt)
add_executable(benchmark.0002.file_io_tsc.stdio_tsc ${CMAKE_CURRENT_LIST_DIR}/stdio_tsc.cc)
add_test(benchmark.0002.file_io_tsc.stdio_tsc benchmark.0002.file_io_tsc.stdio_tsc)
include(${CMAKE_CURRENT_LIST_DIR}/time/CMakeLists.txt)
