add_executable(benchmark__0003.file_io_hex__fstream.cc fstream.cc)
add_test(benchmark__0003.file_io_hex__fstream.cc benchmark__0003.file_io_hex__fstream.cc)
add_executable(benchmark__0003.file_io_hex__fstream_locale.cc fstream_locale.cc)
add_test(benchmark__0003.file_io_hex__fstream_locale.cc benchmark__0003.file_io_hex__fstream_locale.cc)
add_executable(benchmark__0003.file_io_hex__iobuf_file.cc iobuf_file.cc)
add_test(benchmark__0003.file_io_hex__iobuf_file.cc benchmark__0003.file_io_hex__iobuf_file.cc)
add_executable(benchmark__0003.file_io_hex__iobuf_file_addrvw.cc iobuf_file_addrvw.cc)
add_test(benchmark__0003.file_io_hex__iobuf_file_addrvw.cc benchmark__0003.file_io_hex__iobuf_file_addrvw.cc)
add_executable(benchmark__0003.file_io_hex__iobuf_file_l10n.cc iobuf_file_l10n.cc)
add_test(benchmark__0003.file_io_hex__iobuf_file_l10n.cc benchmark__0003.file_io_hex__iobuf_file_l10n.cc)
