add_executable(benchmark.0003.file_io_hex.fstream ${CMAKE_CURRENT_LIST_DIR}/fstream.cc)
add_test(benchmark.0003.file_io_hex.fstream benchmark.0003.file_io_hex.fstream)
add_executable(benchmark.0003.file_io_hex.fstream_locale ${CMAKE_CURRENT_LIST_DIR}/fstream_locale.cc)
add_test(benchmark.0003.file_io_hex.fstream_locale benchmark.0003.file_io_hex.fstream_locale)
add_executable(benchmark.0003.file_io_hex.iobuf_file ${CMAKE_CURRENT_LIST_DIR}/iobuf_file.cc)
add_test(benchmark.0003.file_io_hex.iobuf_file benchmark.0003.file_io_hex.iobuf_file)
add_executable(benchmark.0003.file_io_hex.iobuf_file_addrvw ${CMAKE_CURRENT_LIST_DIR}/iobuf_file_addrvw.cc)
add_test(benchmark.0003.file_io_hex.iobuf_file_addrvw benchmark.0003.file_io_hex.iobuf_file_addrvw)
add_executable(benchmark.0003.file_io_hex.iobuf_file_l10n ${CMAKE_CURRENT_LIST_DIR}/iobuf_file_l10n.cc)
add_test(benchmark.0003.file_io_hex.iobuf_file_l10n benchmark.0003.file_io_hex.iobuf_file_l10n)
