add_executable(benchmark__0004.file_io_floating__charconv_general.cc charconv_general.cc)
add_test(benchmark__0004.file_io_floating__charconv_general.cc benchmark__0004.file_io_floating__charconv_general.cc)
add_executable(benchmark__0004.file_io_floating__charconv_general_float.cc charconv_general_float.cc)
add_test(benchmark__0004.file_io_floating__charconv_general_float.cc benchmark__0004.file_io_floating__charconv_general_float.cc)
add_executable(benchmark__0004.file_io_floating__charconv_hexfloat.cc charconv_hexfloat.cc)
add_test(benchmark__0004.file_io_floating__charconv_hexfloat.cc benchmark__0004.file_io_floating__charconv_hexfloat.cc)
add_executable(benchmark__0004.file_io_floating__charconv_hexfloat_float.cc charconv_hexfloat_float.cc)
add_test(benchmark__0004.file_io_floating__charconv_hexfloat_float.cc benchmark__0004.file_io_floating__charconv_hexfloat_float.cc)
add_executable(benchmark__0004.file_io_floating__decimal.cc decimal.cc)
add_test(benchmark__0004.file_io_floating__decimal.cc benchmark__0004.file_io_floating__decimal.cc)
add_executable(benchmark__0004.file_io_floating__decimal_float.cc decimal_float.cc)
add_test(benchmark__0004.file_io_floating__decimal_float.cc benchmark__0004.file_io_floating__decimal_float.cc)
add_executable(benchmark__0004.file_io_floating__decimal_l10n.cc decimal_l10n.cc)
add_test(benchmark__0004.file_io_floating__decimal_l10n.cc benchmark__0004.file_io_floating__decimal_l10n.cc)
add_executable(benchmark__0004.file_io_floating__general.cc general.cc)
add_test(benchmark__0004.file_io_floating__general.cc benchmark__0004.file_io_floating__general.cc)
add_executable(benchmark__0004.file_io_floating__general_float.cc general_float.cc)
add_test(benchmark__0004.file_io_floating__general_float.cc benchmark__0004.file_io_floating__general_float.cc)
add_executable(benchmark__0004.file_io_floating__general_l10n.cc general_l10n.cc)
add_test(benchmark__0004.file_io_floating__general_l10n.cc benchmark__0004.file_io_floating__general_l10n.cc)
add_executable(benchmark__0004.file_io_floating__hexfloat.cc hexfloat.cc)
add_test(benchmark__0004.file_io_floating__hexfloat.cc benchmark__0004.file_io_floating__hexfloat.cc)
add_executable(benchmark__0004.file_io_floating__hexfloat_float.cc hexfloat_float.cc)
add_test(benchmark__0004.file_io_floating__hexfloat_float.cc benchmark__0004.file_io_floating__hexfloat_float.cc)
