add_executable(benchmark.0004.file_io_floating.charconv_general ${CMAKE_CURRENT_LIST_DIR}/charconv_general.cc)
add_test(benchmark.0004.file_io_floating.charconv_general benchmark.0004.file_io_floating.charconv_general)
add_executable(benchmark.0004.file_io_floating.charconv_general_float ${CMAKE_CURRENT_LIST_DIR}/charconv_general_float.cc)
add_test(benchmark.0004.file_io_floating.charconv_general_float benchmark.0004.file_io_floating.charconv_general_float)
add_executable(benchmark.0004.file_io_floating.charconv_hexfloat ${CMAKE_CURRENT_LIST_DIR}/charconv_hexfloat.cc)
add_test(benchmark.0004.file_io_floating.charconv_hexfloat benchmark.0004.file_io_floating.charconv_hexfloat)
add_executable(benchmark.0004.file_io_floating.charconv_hexfloat_float ${CMAKE_CURRENT_LIST_DIR}/charconv_hexfloat_float.cc)
add_test(benchmark.0004.file_io_floating.charconv_hexfloat_float benchmark.0004.file_io_floating.charconv_hexfloat_float)
add_executable(benchmark.0004.file_io_floating.decimal ${CMAKE_CURRENT_LIST_DIR}/decimal.cc)
add_test(benchmark.0004.file_io_floating.decimal benchmark.0004.file_io_floating.decimal)
add_executable(benchmark.0004.file_io_floating.decimal_float ${CMAKE_CURRENT_LIST_DIR}/decimal_float.cc)
add_test(benchmark.0004.file_io_floating.decimal_float benchmark.0004.file_io_floating.decimal_float)
add_executable(benchmark.0004.file_io_floating.decimal_l10n ${CMAKE_CURRENT_LIST_DIR}/decimal_l10n.cc)
add_test(benchmark.0004.file_io_floating.decimal_l10n benchmark.0004.file_io_floating.decimal_l10n)
add_executable(benchmark.0004.file_io_floating.general ${CMAKE_CURRENT_LIST_DIR}/general.cc)
add_test(benchmark.0004.file_io_floating.general benchmark.0004.file_io_floating.general)
add_executable(benchmark.0004.file_io_floating.general_float ${CMAKE_CURRENT_LIST_DIR}/general_float.cc)
add_test(benchmark.0004.file_io_floating.general_float benchmark.0004.file_io_floating.general_float)
add_executable(benchmark.0004.file_io_floating.general_l10n ${CMAKE_CURRENT_LIST_DIR}/general_l10n.cc)
add_test(benchmark.0004.file_io_floating.general_l10n benchmark.0004.file_io_floating.general_l10n)
add_executable(benchmark.0004.file_io_floating.hexfloat ${CMAKE_CURRENT_LIST_DIR}/hexfloat.cc)
add_test(benchmark.0004.file_io_floating.hexfloat benchmark.0004.file_io_floating.hexfloat)
add_executable(benchmark.0004.file_io_floating.hexfloat_float ${CMAKE_CURRENT_LIST_DIR}/hexfloat_float.cc)
add_test(benchmark.0004.file_io_floating.hexfloat_float benchmark.0004.file_io_floating.hexfloat_float)
