add_executable(benchmark__0007.concat__concat_cstring.cc concat_cstring.cc)
add_test(benchmark__0007.concat__concat_cstring.cc benchmark__0007.concat__concat_cstring.cc)
add_executable(benchmark__0007.concat__concat_fast_io.cc concat_fast_io.cc)
add_test(benchmark__0007.concat__concat_fast_io.cc benchmark__0007.concat__concat_fast_io.cc)
add_executable(benchmark__0007.concat__concat_hstring.cc concat_hstring.cc)
add_test(benchmark__0007.concat__concat_hstring.cc benchmark__0007.concat__concat_hstring.cc)
add_executable(benchmark__0007.concat__concat_qstring.cc concat_qstring.cc)
add_test(benchmark__0007.concat__concat_qstring.cc benchmark__0007.concat__concat_qstring.cc)
add_executable(benchmark__0007.concat__concat_std.cc concat_std.cc)
add_test(benchmark__0007.concat__concat_std.cc benchmark__0007.concat__concat_std.cc)
add_executable(benchmark__0007.concat__concat_vs_format.cc concat_vs_format.cc)
add_test(benchmark__0007.concat__concat_vs_format.cc benchmark__0007.concat__concat_vs_format.cc)
add_executable(benchmark__0007.concat__to_hstring.cc to_hstring.cc)
add_test(benchmark__0007.concat__to_hstring.cc benchmark__0007.concat__to_hstring.cc)
add_executable(benchmark__0007.concat__u32concat_fast_io.cc u32concat_fast_io.cc)
add_test(benchmark__0007.concat__u32concat_fast_io.cc benchmark__0007.concat__u32concat_fast_io.cc)
add_executable(benchmark__0007.concat__u32concat_std.cc u32concat_std.cc)
add_test(benchmark__0007.concat__u32concat_std.cc benchmark__0007.concat__u32concat_std.cc)
