add_executable(benchmark.0007.concat.concat_cstring ${CMAKE_CURRENT_LIST_DIR}/concat_cstring.cc)
add_test(benchmark.0007.concat.concat_cstring benchmark.0007.concat.concat_cstring)
add_executable(benchmark.0007.concat.concat_fast_io ${CMAKE_CURRENT_LIST_DIR}/concat_fast_io.cc)
add_test(benchmark.0007.concat.concat_fast_io benchmark.0007.concat.concat_fast_io)
add_executable(benchmark.0007.concat.concat_hstring ${CMAKE_CURRENT_LIST_DIR}/concat_hstring.cc)
add_test(benchmark.0007.concat.concat_hstring benchmark.0007.concat.concat_hstring)
add_executable(benchmark.0007.concat.concat_qstring ${CMAKE_CURRENT_LIST_DIR}/concat_qstring.cc)
add_test(benchmark.0007.concat.concat_qstring benchmark.0007.concat.concat_qstring)
add_executable(benchmark.0007.concat.concat_std ${CMAKE_CURRENT_LIST_DIR}/concat_std.cc)
add_test(benchmark.0007.concat.concat_std benchmark.0007.concat.concat_std)
add_executable(benchmark.0007.concat.concat_vs_format ${CMAKE_CURRENT_LIST_DIR}/concat_vs_format.cc)
add_test(benchmark.0007.concat.concat_vs_format benchmark.0007.concat.concat_vs_format)
add_executable(benchmark.0007.concat.to_hstring ${CMAKE_CURRENT_LIST_DIR}/to_hstring.cc)
add_test(benchmark.0007.concat.to_hstring benchmark.0007.concat.to_hstring)
add_executable(benchmark.0007.concat.u32concat_fast_io ${CMAKE_CURRENT_LIST_DIR}/u32concat_fast_io.cc)
add_test(benchmark.0007.concat.u32concat_fast_io benchmark.0007.concat.u32concat_fast_io)
add_executable(benchmark.0007.concat.u32concat_std ${CMAKE_CURRENT_LIST_DIR}/u32concat_std.cc)
add_test(benchmark.0007.concat.u32concat_std benchmark.0007.concat.u32concat_std)
