add_executable(benchmark__0009.concatstring__concat_fast_io.cc concat_fast_io.cc)
add_test(benchmark__0009.concatstring__concat_fast_io.cc benchmark__0009.concatstring__concat_fast_io.cc)
add_executable(benchmark__0009.concatstring__concat_std.cc concat_std.cc)
add_test(benchmark__0009.concatstring__concat_std.cc benchmark__0009.concatstring__concat_std.cc)
add_executable(benchmark__0009.concatstring__format.cc format.cc)
add_test(benchmark__0009.concatstring__format.cc benchmark__0009.concatstring__format.cc)
add_executable(benchmark__0009.concatstring__stringstream.cc stringstream.cc)
add_test(benchmark__0009.concatstring__stringstream.cc benchmark__0009.concatstring__stringstream.cc)
add_executable(benchmark__0009.concatstring__tostring.cc tostring.cc)
add_test(benchmark__0009.concatstring__tostring.cc benchmark__0009.concatstring__tostring.cc)
