add_executable(benchmark.0009.concatstring.concat_fast_io ${CMAKE_CURRENT_LIST_DIR}/concat_fast_io.cc)
add_test(benchmark.0009.concatstring.concat_fast_io benchmark.0009.concatstring.concat_fast_io)
add_executable(benchmark.0009.concatstring.concat_std ${CMAKE_CURRENT_LIST_DIR}/concat_std.cc)
add_test(benchmark.0009.concatstring.concat_std benchmark.0009.concatstring.concat_std)
add_executable(benchmark.0009.concatstring.format ${CMAKE_CURRENT_LIST_DIR}/format.cc)
add_test(benchmark.0009.concatstring.format benchmark.0009.concatstring.format)
add_executable(benchmark.0009.concatstring.stringstream ${CMAKE_CURRENT_LIST_DIR}/stringstream.cc)
add_test(benchmark.0009.concatstring.stringstream benchmark.0009.concatstring.stringstream)
add_executable(benchmark.0009.concatstring.tostring ${CMAKE_CURRENT_LIST_DIR}/tostring.cc)
add_test(benchmark.0009.concatstring.tostring benchmark.0009.concatstring.tostring)
