add_executable(benchmark__0010.line__contiguous_line_scanner.cc contiguous_line_scanner.cc)
add_test(benchmark__0010.line__contiguous_line_scanner.cc benchmark__0010.line__contiguous_line_scanner.cc)
add_executable(benchmark__0010.line__getline.cc getline.cc)
add_test(benchmark__0010.line__getline.cc benchmark__0010.line__getline.cc)
add_executable(benchmark__0010.line__line_get.cc line_get.cc)
add_test(benchmark__0010.line__line_get.cc benchmark__0010.line__line_get.cc)
add_executable(benchmark__0010.line__line_get_fbf.cc line_get_fbf.cc)
add_test(benchmark__0010.line__line_get_fbf.cc benchmark__0010.line__line_get_fbf.cc)
add_executable(benchmark__0010.line__line_scanner.cc line_scanner.cc)
add_test(benchmark__0010.line__line_scanner.cc benchmark__0010.line__line_scanner.cc)
add_executable(benchmark__0010.line__random_data.cc random_data.cc)
add_test(benchmark__0010.line__random_data.cc benchmark__0010.line__random_data.cc)
add_executable(benchmark__0010.line__scan_qstring.cc scan_qstring.cc)
add_test(benchmark__0010.line__scan_qstring.cc benchmark__0010.line__scan_qstring.cc)
add_executable(benchmark__0010.line__scan_qstring_u16utf8.cc scan_qstring_u16utf8.cc)
add_test(benchmark__0010.line__scan_qstring_u16utf8.cc benchmark__0010.line__scan_qstring_u16utf8.cc)
add_executable(benchmark__0010.line__scan_strlike.cc scan_strlike.cc)
add_test(benchmark__0010.line__scan_strlike.cc benchmark__0010.line__scan_strlike.cc)
add_executable(benchmark__0010.line__scan_u16string_u16utf8.cc scan_u16string_u16utf8.cc)
add_test(benchmark__0010.line__scan_u16string_u16utf8.cc benchmark__0010.line__scan_u16string_u16utf8.cc)
add_executable(benchmark__0010.line__scan_winrt_hstring.cc scan_winrt_hstring.cc)
add_test(benchmark__0010.line__scan_winrt_hstring.cc benchmark__0010.line__scan_winrt_hstring.cc)
