add_executable(benchmark.0010.line.contiguous_line_scanner ${CMAKE_CURRENT_LIST_DIR}/contiguous_line_scanner.cc)
add_test(benchmark.0010.line.contiguous_line_scanner benchmark.0010.line.contiguous_line_scanner)
add_executable(benchmark.0010.line.getline ${CMAKE_CURRENT_LIST_DIR}/getline.cc)
add_test(benchmark.0010.line.getline benchmark.0010.line.getline)
add_executable(benchmark.0010.line.line_get ${CMAKE_CURRENT_LIST_DIR}/line_get.cc)
add_test(benchmark.0010.line.line_get benchmark.0010.line.line_get)
add_executable(benchmark.0010.line.line_get_fbf ${CMAKE_CURRENT_LIST_DIR}/line_get_fbf.cc)
add_test(benchmark.0010.line.line_get_fbf benchmark.0010.line.line_get_fbf)
add_executable(benchmark.0010.line.line_scanner ${CMAKE_CURRENT_LIST_DIR}/line_scanner.cc)
add_test(benchmark.0010.line.line_scanner benchmark.0010.line.line_scanner)
add_executable(benchmark.0010.line.random_data ${CMAKE_CURRENT_LIST_DIR}/random_data.cc)
add_test(benchmark.0010.line.random_data benchmark.0010.line.random_data)
add_executable(benchmark.0010.line.scan_qstring ${CMAKE_CURRENT_LIST_DIR}/scan_qstring.cc)
add_test(benchmark.0010.line.scan_qstring benchmark.0010.line.scan_qstring)
add_executable(benchmark.0010.line.scan_qstring_u16utf8 ${CMAKE_CURRENT_LIST_DIR}/scan_qstring_u16utf8.cc)
add_test(benchmark.0010.line.scan_qstring_u16utf8 benchmark.0010.line.scan_qstring_u16utf8)
add_executable(benchmark.0010.line.scan_strlike ${CMAKE_CURRENT_LIST_DIR}/scan_strlike.cc)
add_test(benchmark.0010.line.scan_strlike benchmark.0010.line.scan_strlike)
add_executable(benchmark.0010.line.scan_u16string_u16utf8 ${CMAKE_CURRENT_LIST_DIR}/scan_u16string_u16utf8.cc)
add_test(benchmark.0010.line.scan_u16string_u16utf8 benchmark.0010.line.scan_u16string_u16utf8)
add_executable(benchmark.0010.line.scan_winrt_hstring ${CMAKE_CURRENT_LIST_DIR}/scan_winrt_hstring.cc)
add_test(benchmark.0010.line.scan_winrt_hstring benchmark.0010.line.scan_winrt_hstring)
