add_executable(benchmark__0013.bitset__filebuf_file.cc filebuf_file.cc)
add_test(benchmark__0013.bitset__filebuf_file.cc benchmark__0013.bitset__filebuf_file.cc)
add_executable(benchmark__0013.bitset__ostream.cc ostream.cc)
add_test(benchmark__0013.bitset__ostream.cc benchmark__0013.bitset__ostream.cc)
add_executable(benchmark__0013.bitset__u8c_file.cc u8c_file.cc)
add_test(benchmark__0013.bitset__u8c_file.cc benchmark__0013.bitset__u8c_file.cc)
add_executable(benchmark__0013.bitset__u8c_file_unlocked.cc u8c_file_unlocked.cc)
add_test(benchmark__0013.bitset__u8c_file_unlocked.cc benchmark__0013.bitset__u8c_file_unlocked.cc)
add_executable(benchmark__0013.bitset__u8obuf_file.cc u8obuf_file.cc)
add_test(benchmark__0013.bitset__u8obuf_file.cc benchmark__0013.bitset__u8obuf_file.cc)
