add_executable(benchmark.0013.bitset.filebuf_file ${CMAKE_CURRENT_LIST_DIR}/filebuf_file.cc)
add_test(benchmark.0013.bitset.filebuf_file benchmark.0013.bitset.filebuf_file)
add_executable(benchmark.0013.bitset.ostream ${CMAKE_CURRENT_LIST_DIR}/ostream.cc)
add_test(benchmark.0013.bitset.ostream benchmark.0013.bitset.ostream)
add_executable(benchmark.0013.bitset.u8c_file ${CMAKE_CURRENT_LIST_DIR}/u8c_file.cc)
add_test(benchmark.0013.bitset.u8c_file benchmark.0013.bitset.u8c_file)
add_executable(benchmark.0013.bitset.u8c_file_unlocked ${CMAKE_CURRENT_LIST_DIR}/u8c_file_unlocked.cc)
add_test(benchmark.0013.bitset.u8c_file_unlocked benchmark.0013.bitset.u8c_file_unlocked)
add_executable(benchmark.0013.bitset.u8obuf_file ${CMAKE_CURRENT_LIST_DIR}/u8obuf_file.cc)
add_test(benchmark.0013.bitset.u8obuf_file benchmark.0013.bitset.u8obuf_file)
