add_executable(benchmark__0015.string__istream.cc istream.cc)
add_test(benchmark__0015.string__istream.cc benchmark__0015.string__istream.cc)
add_executable(benchmark__0015.string__random_data.cc random_data.cc)
add_test(benchmark__0015.string__random_data.cc benchmark__0015.string__random_data.cc)
add_executable(benchmark__0015.string__scan.cc scan.cc)
add_test(benchmark__0015.string__scan.cc benchmark__0015.string__scan.cc)
add_executable(benchmark__0015.string__scan_fbf.cc scan_fbf.cc)
add_test(benchmark__0015.string__scan_fbf.cc benchmark__0015.string__scan_fbf.cc)
add_executable(benchmark__0015.string__scan_qstring.cc scan_qstring.cc)
add_test(benchmark__0015.string__scan_qstring.cc benchmark__0015.string__scan_qstring.cc)
add_executable(benchmark__0015.string__scan_qstring_u16utf8.cc scan_qstring_u16utf8.cc)
add_test(benchmark__0015.string__scan_qstring_u16utf8.cc benchmark__0015.string__scan_qstring_u16utf8.cc)
add_executable(benchmark__0015.string__scan_strlike.cc scan_strlike.cc)
add_test(benchmark__0015.string__scan_strlike.cc benchmark__0015.string__scan_strlike.cc)
add_executable(benchmark__0015.string__scan_u16string_u16utf8.cc scan_u16string_u16utf8.cc)
add_test(benchmark__0015.string__scan_u16string_u16utf8.cc benchmark__0015.string__scan_u16string_u16utf8.cc)
add_executable(benchmark__0015.string__scan_winrt_hstring.cc scan_winrt_hstring.cc)
add_test(benchmark__0015.string__scan_winrt_hstring.cc benchmark__0015.string__scan_winrt_hstring.cc)
