add_executable(benchmark.0015.string.istream ${CMAKE_CURRENT_LIST_DIR}/istream.cc)
add_test(benchmark.0015.string.istream benchmark.0015.string.istream)
add_executable(benchmark.0015.string.random_data ${CMAKE_CURRENT_LIST_DIR}/random_data.cc)
add_test(benchmark.0015.string.random_data benchmark.0015.string.random_data)
add_executable(benchmark.0015.string.scan ${CMAKE_CURRENT_LIST_DIR}/scan.cc)
add_test(benchmark.0015.string.scan benchmark.0015.string.scan)
add_executable(benchmark.0015.string.scan_fbf ${CMAKE_CURRENT_LIST_DIR}/scan_fbf.cc)
add_test(benchmark.0015.string.scan_fbf benchmark.0015.string.scan_fbf)
add_executable(benchmark.0015.string.scan_qstring ${CMAKE_CURRENT_LIST_DIR}/scan_qstring.cc)
add_test(benchmark.0015.string.scan_qstring benchmark.0015.string.scan_qstring)
add_executable(benchmark.0015.string.scan_qstring_u16utf8 ${CMAKE_CURRENT_LIST_DIR}/scan_qstring_u16utf8.cc)
add_test(benchmark.0015.string.scan_qstring_u16utf8 benchmark.0015.string.scan_qstring_u16utf8)
add_executable(benchmark.0015.string.scan_strlike ${CMAKE_CURRENT_LIST_DIR}/scan_strlike.cc)
add_test(benchmark.0015.string.scan_strlike benchmark.0015.string.scan_strlike)
add_executable(benchmark.0015.string.scan_u16string_u16utf8 ${CMAKE_CURRENT_LIST_DIR}/scan_u16string_u16utf8.cc)
add_test(benchmark.0015.string.scan_u16string_u16utf8 benchmark.0015.string.scan_u16string_u16utf8)
add_executable(benchmark.0015.string.scan_winrt_hstring ${CMAKE_CURRENT_LIST_DIR}/scan_winrt_hstring.cc)
add_test(benchmark.0015.string.scan_winrt_hstring benchmark.0015.string.scan_winrt_hstring)
