add_executable(benchmark__0016.endl__filebuf_file.cc filebuf_file.cc)
add_test(benchmark__0016.endl__filebuf_file.cc benchmark__0016.endl__filebuf_file.cc)
add_executable(benchmark__0016.endl__ofstream.cc ofstream.cc)
add_test(benchmark__0016.endl__ofstream.cc benchmark__0016.endl__ofstream.cc)
add_executable(benchmark__0016.endl__ofstream_endl.cc ofstream_endl.cc)
add_test(benchmark__0016.endl__ofstream_endl.cc benchmark__0016.endl__ofstream_endl.cc)
add_executable(benchmark__0016.endl__u8c_file_unlocked.cc u8c_file_unlocked.cc)
add_test(benchmark__0016.endl__u8c_file_unlocked.cc benchmark__0016.endl__u8c_file_unlocked.cc)
add_executable(benchmark__0016.endl__u8native_file.cc u8native_file.cc)
add_test(benchmark__0016.endl__u8native_file.cc benchmark__0016.endl__u8native_file.cc)
add_executable(benchmark__0016.endl__u8obuf_file.cc u8obuf_file.cc)
add_test(benchmark__0016.endl__u8obuf_file.cc benchmark__0016.endl__u8obuf_file.cc)
