add_executable(benchmark.0016.endl.filebuf_file ${CMAKE_CURRENT_LIST_DIR}/filebuf_file.cc)
add_test(benchmark.0016.endl.filebuf_file benchmark.0016.endl.filebuf_file)
add_executable(benchmark.0016.endl.ofstream ${CMAKE_CURRENT_LIST_DIR}/ofstream.cc)
add_test(benchmark.0016.endl.ofstream benchmark.0016.endl.ofstream)
add_executable(benchmark.0016.endl.ofstream_endl ${CMAKE_CURRENT_LIST_DIR}/ofstream_endl.cc)
add_test(benchmark.0016.endl.ofstream_endl benchmark.0016.endl.ofstream_endl)
add_executable(benchmark.0016.endl.u8c_file_unlocked ${CMAKE_CURRENT_LIST_DIR}/u8c_file_unlocked.cc)
add_test(benchmark.0016.endl.u8c_file_unlocked benchmark.0016.endl.u8c_file_unlocked)
add_executable(benchmark.0016.endl.u8native_file ${CMAKE_CURRENT_LIST_DIR}/u8native_file.cc)
add_test(benchmark.0016.endl.u8native_file benchmark.0016.endl.u8native_file)
add_executable(benchmark.0016.endl.u8obuf_file ${CMAKE_CURRENT_LIST_DIR}/u8obuf_file.cc)
add_test(benchmark.0016.endl.u8obuf_file benchmark.0016.endl.u8obuf_file)
