add_executable(helloworld helloworld.cc)
add_test(helloworldtest helloworld)
set_tests_properties(helloworldtest PROPERTIES PASS_REGULAR_EXPRESSION "Hello World")
add_executable(helloworld_out_buf_mutex helloworld_out_buf_mutex.cc)
add_test(helloworld_out_buf_mutextest helloworld_out_buf_mutex)
set_tests_properties(helloworld_out_buf_mutextest PROPERTIES PASS_REGULAR_EXPRESSION "Hello World")
add_executable(helloworld_out helloworld_out.cc)
add_test(helloworld_outtest helloworld_out)
set_tests_properties(helloworld_outtest PROPERTIES PASS_REGULAR_EXPRESSION "Hello World")
