add_executable(examples__0001.helloworld__examples.cc examples.cc)
add_test(examples__0001.helloworld__examples.cc examples__0001.helloworld__examples.cc)
add_executable(examples__0001.helloworld__helloworld.cc helloworld.cc)
add_test(examples__0001.helloworld__helloworld.cc examples__0001.helloworld__helloworld.cc)
add_executable(examples__0001.helloworld__helloworld_android_remote_dbg.cc helloworld_android_remote_dbg.cc)
add_test(examples__0001.helloworld__helloworld_android_remote_dbg.cc examples__0001.helloworld__helloworld_android_remote_dbg.cc)
add_executable(examples__0001.helloworld__helloworld_dbg.cc helloworld_dbg.cc)
add_test(examples__0001.helloworld__helloworld_dbg.cc examples__0001.helloworld__helloworld_dbg.cc)
add_executable(examples__0001.helloworld__helloworld_out.cc helloworld_out.cc)
add_test(examples__0001.helloworld__helloworld_out.cc examples__0001.helloworld__helloworld_out.cc)
add_executable(examples__0001.helloworld__helloworld_out_buf_lockable.cc helloworld_out_buf_lockable.cc)
add_test(examples__0001.helloworld__helloworld_out_buf_lockable.cc examples__0001.helloworld__helloworld_out_buf_lockable.cc)
