add_executable(examples.0001.helloworld.examples ${CMAKE_CURRENT_LIST_DIR}/examples.cc)
add_test(examples.0001.helloworld.examples examples.0001.helloworld.examples)
add_executable(examples.0001.helloworld.helloworld ${CMAKE_CURRENT_LIST_DIR}/helloworld.cc)
add_test(examples.0001.helloworld.helloworld examples.0001.helloworld.helloworld)
add_executable(examples.0001.helloworld.helloworld_android_remote_dbg ${CMAKE_CURRENT_LIST_DIR}/helloworld_android_remote_dbg.cc)
add_test(examples.0001.helloworld.helloworld_android_remote_dbg examples.0001.helloworld.helloworld_android_remote_dbg)
add_executable(examples.0001.helloworld.helloworld_dbg ${CMAKE_CURRENT_LIST_DIR}/helloworld_dbg.cc)
add_test(examples.0001.helloworld.helloworld_dbg examples.0001.helloworld.helloworld_dbg)
add_executable(examples.0001.helloworld.helloworld_out ${CMAKE_CURRENT_LIST_DIR}/helloworld_out.cc)
add_test(examples.0001.helloworld.helloworld_out examples.0001.helloworld.helloworld_out)
add_executable(examples.0001.helloworld.helloworld_out_buf_lockable ${CMAKE_CURRENT_LIST_DIR}/helloworld_out_buf_lockable.cc)
add_test(examples.0001.helloworld.helloworld_out_buf_lockable examples.0001.helloworld.helloworld_out_buf_lockable)
