add_executable(examples__0002.a+b__a+b.cc a+b.cc)
add_test(examples__0002.a+b__a+b.cc examples__0002.a+b__a+b.cc)
add_executable(examples__0002.a+b__base36_a+b.cc base36_a+b.cc)
add_test(examples__0002.a+b__base36_a+b.cc examples__0002.a+b__base36_a+b.cc)
add_executable(examples__0002.a+b__hex_a+b.cc hex_a+b.cc)
add_test(examples__0002.a+b__hex_a+b.cc examples__0002.a+b__hex_a+b.cc)
