add_executable(examples__0003.manipulators__0x2a.cc 0x2a.cc)
add_test(examples__0003.manipulators__0x2a.cc examples__0003.manipulators__0x2a.cc)
add_executable(examples__0003.manipulators__0x2a_0x.cc 0x2a_0x.cc)
add_test(examples__0003.manipulators__0x2a_0x.cc examples__0003.manipulators__0x2a_0x.cc)
add_executable(examples__0003.manipulators__0x2a_0x_imbue.cc 0x2a_0x_imbue.cc)
add_test(examples__0003.manipulators__0x2a_0x_imbue.cc examples__0003.manipulators__0x2a_0x_imbue.cc)
add_executable(examples__0003.manipulators__0x2a_0x_imbue_for_fout.cc 0x2a_0x_imbue_for_fout.cc)
add_test(examples__0003.manipulators__0x2a_0x_imbue_for_fout.cc examples__0003.manipulators__0x2a_0x_imbue_for_fout.cc)
add_executable(examples__0003.manipulators__0x2a_custom.cc 0x2a_custom.cc)
add_test(examples__0003.manipulators__0x2a_custom.cc examples__0003.manipulators__0x2a_custom.cc)
add_executable(examples__0003.manipulators__boolalpha.cc boolalpha.cc)
add_test(examples__0003.manipulators__boolalpha.cc examples__0003.manipulators__boolalpha.cc)
add_executable(examples__0003.manipulators__chvw.cc chvw.cc)
add_test(examples__0003.manipulators__chvw.cc examples__0003.manipulators__chvw.cc)
add_executable(examples__0003.manipulators__cond.cc cond.cc)
add_test(examples__0003.manipulators__cond.cc examples__0003.manipulators__cond.cc)
add_executable(examples__0003.manipulators__os_c_str.cc os_c_str.cc)
add_test(examples__0003.manipulators__os_c_str.cc examples__0003.manipulators__os_c_str.cc)
add_executable(examples__0003.manipulators__pointer.cc pointer.cc)
add_test(examples__0003.manipulators__pointer.cc examples__0003.manipulators__pointer.cc)
add_executable(examples__0003.manipulators__rgvw.cc rgvw.cc)
add_test(examples__0003.manipulators__rgvw.cc examples__0003.manipulators__rgvw.cc)
add_executable(examples__0003.manipulators__width.cc width.cc)
add_test(examples__0003.manipulators__width.cc examples__0003.manipulators__width.cc)
add_executable(examples__0003.manipulators__width_runtime.cc width_runtime.cc)
add_test(examples__0003.manipulators__width_runtime.cc examples__0003.manipulators__width_runtime.cc)
