add_executable(examples.0003.manipulators.0x2a ${CMAKE_CURRENT_LIST_DIR}/0x2a.cc)
add_test(examples.0003.manipulators.0x2a examples.0003.manipulators.0x2a)
add_executable(examples.0003.manipulators.0x2a_0x ${CMAKE_CURRENT_LIST_DIR}/0x2a_0x.cc)
add_test(examples.0003.manipulators.0x2a_0x examples.0003.manipulators.0x2a_0x)
add_executable(examples.0003.manipulators.0x2a_0x_imbue ${CMAKE_CURRENT_LIST_DIR}/0x2a_0x_imbue.cc)
add_test(examples.0003.manipulators.0x2a_0x_imbue examples.0003.manipulators.0x2a_0x_imbue)
add_executable(examples.0003.manipulators.0x2a_0x_imbue_for_fout ${CMAKE_CURRENT_LIST_DIR}/0x2a_0x_imbue_for_fout.cc)
add_test(examples.0003.manipulators.0x2a_0x_imbue_for_fout examples.0003.manipulators.0x2a_0x_imbue_for_fout)
add_executable(examples.0003.manipulators.0x2a_custom ${CMAKE_CURRENT_LIST_DIR}/0x2a_custom.cc)
add_test(examples.0003.manipulators.0x2a_custom examples.0003.manipulators.0x2a_custom)
add_executable(examples.0003.manipulators.boolalpha ${CMAKE_CURRENT_LIST_DIR}/boolalpha.cc)
add_test(examples.0003.manipulators.boolalpha examples.0003.manipulators.boolalpha)
add_executable(examples.0003.manipulators.chvw ${CMAKE_CURRENT_LIST_DIR}/chvw.cc)
add_test(examples.0003.manipulators.chvw examples.0003.manipulators.chvw)
add_executable(examples.0003.manipulators.cond ${CMAKE_CURRENT_LIST_DIR}/cond.cc)
add_test(examples.0003.manipulators.cond examples.0003.manipulators.cond)
add_executable(examples.0003.manipulators.os_c_str ${CMAKE_CURRENT_LIST_DIR}/os_c_str.cc)
add_test(examples.0003.manipulators.os_c_str examples.0003.manipulators.os_c_str)
add_executable(examples.0003.manipulators.pointer ${CMAKE_CURRENT_LIST_DIR}/pointer.cc)
add_test(examples.0003.manipulators.pointer examples.0003.manipulators.pointer)
add_executable(examples.0003.manipulators.rgvw ${CMAKE_CURRENT_LIST_DIR}/rgvw.cc)
add_test(examples.0003.manipulators.rgvw examples.0003.manipulators.rgvw)
add_executable(examples.0003.manipulators.width ${CMAKE_CURRENT_LIST_DIR}/width.cc)
add_test(examples.0003.manipulators.width examples.0003.manipulators.width)
add_executable(examples.0003.manipulators.width_runtime ${CMAKE_CURRENT_LIST_DIR}/width_runtime.cc)
add_test(examples.0003.manipulators.width_runtime examples.0003.manipulators.width_runtime)
