add_executable(examples__0004.time__posix_clock_gettime.cc posix_clock_gettime.cc)
add_test(examples__0004.time__posix_clock_gettime.cc examples__0004.time__posix_clock_gettime.cc)
add_executable(examples__0004.time__timezone.cc timezone.cc)
add_test(examples__0004.time__timezone.cc examples__0004.time__timezone.cc)
