add_executable(examples.0004.time.posix_clock_gettime ${CMAKE_CURRENT_LIST_DIR}/posix_clock_gettime.cc)
add_test(examples.0004.time.posix_clock_gettime examples.0004.time.posix_clock_gettime)
add_executable(examples.0004.time.timezone ${CMAKE_CURRENT_LIST_DIR}/timezone.cc)
add_test(examples.0004.time.timezone examples.0004.time.timezone)
