add_executable(examples__0005.sha__compile_time.cc compile_time.cc)
add_test(examples__0005.sha__compile_time.cc examples__0005.sha__compile_time.cc)
add_executable(examples__0005.sha__crc32.cc crc32.cc)
add_test(examples__0005.sha__crc32.cc examples__0005.sha__crc32.cc)
add_executable(examples__0005.sha__cryptopp_md5.cc cryptopp_md5.cc)
add_test(examples__0005.sha__cryptopp_md5.cc examples__0005.sha__cryptopp_md5.cc)
add_executable(examples__0005.sha__cryptopp_sha256.cc cryptopp_sha256.cc)
add_test(examples__0005.sha__cryptopp_sha256.cc examples__0005.sha__cryptopp_sha256.cc)
add_executable(examples__0005.sha__cryptopp_sha512.cc cryptopp_sha512.cc)
add_test(examples__0005.sha__cryptopp_sha512.cc examples__0005.sha__cryptopp_sha512.cc)
add_executable(examples__0005.sha__md5.cc md5.cc)
add_test(examples__0005.sha__md5.cc examples__0005.sha__md5.cc)
add_executable(examples__0005.sha__native_hash_file.cc native_hash_file.cc)
add_test(examples__0005.sha__native_hash_file.cc examples__0005.sha__native_hash_file.cc)
add_executable(examples__0005.sha__ossl_evp.cc ossl_evp.cc)
add_test(examples__0005.sha__ossl_evp.cc examples__0005.sha__ossl_evp.cc)
add_executable(examples__0005.sha__ossl_md5.cc ossl_md5.cc)
add_test(examples__0005.sha__ossl_md5.cc examples__0005.sha__ossl_md5.cc)
add_executable(examples__0005.sha__ossl_sha1.cc ossl_sha1.cc)
add_test(examples__0005.sha__ossl_sha1.cc examples__0005.sha__ossl_sha1.cc)
add_executable(examples__0005.sha__ossl_sha256.cc ossl_sha256.cc)
add_test(examples__0005.sha__ossl_sha256.cc examples__0005.sha__ossl_sha256.cc)
add_executable(examples__0005.sha__ossl_sha512.cc ossl_sha512.cc)
add_test(examples__0005.sha__ossl_sha512.cc examples__0005.sha__ossl_sha512.cc)
add_executable(examples__0005.sha__sha1.cc sha1.cc)
add_test(examples__0005.sha__sha1.cc examples__0005.sha__sha1.cc)
add_executable(examples__0005.sha__sha256.cc sha256.cc)
add_test(examples__0005.sha__sha256.cc examples__0005.sha__sha256.cc)
add_executable(examples__0005.sha__sha512.cc sha512.cc)
add_test(examples__0005.sha__sha512.cc examples__0005.sha__sha512.cc)
