add_executable(examples.0005.sha.compile_time ${CMAKE_CURRENT_LIST_DIR}/compile_time.cc)
add_test(examples.0005.sha.compile_time examples.0005.sha.compile_time)
add_executable(examples.0005.sha.crc32 ${CMAKE_CURRENT_LIST_DIR}/crc32.cc)
add_test(examples.0005.sha.crc32 examples.0005.sha.crc32)
add_executable(examples.0005.sha.cryptopp_md5 ${CMAKE_CURRENT_LIST_DIR}/cryptopp_md5.cc)
add_test(examples.0005.sha.cryptopp_md5 examples.0005.sha.cryptopp_md5)
add_executable(examples.0005.sha.cryptopp_sha256 ${CMAKE_CURRENT_LIST_DIR}/cryptopp_sha256.cc)
add_test(examples.0005.sha.cryptopp_sha256 examples.0005.sha.cryptopp_sha256)
add_executable(examples.0005.sha.cryptopp_sha512 ${CMAKE_CURRENT_LIST_DIR}/cryptopp_sha512.cc)
add_test(examples.0005.sha.cryptopp_sha512 examples.0005.sha.cryptopp_sha512)
add_executable(examples.0005.sha.md5 ${CMAKE_CURRENT_LIST_DIR}/md5.cc)
add_test(examples.0005.sha.md5 examples.0005.sha.md5)
add_executable(examples.0005.sha.native_hash_file ${CMAKE_CURRENT_LIST_DIR}/native_hash_file.cc)
add_test(examples.0005.sha.native_hash_file examples.0005.sha.native_hash_file)
add_executable(examples.0005.sha.ossl_evp ${CMAKE_CURRENT_LIST_DIR}/ossl_evp.cc)
add_test(examples.0005.sha.ossl_evp examples.0005.sha.ossl_evp)
add_executable(examples.0005.sha.ossl_md5 ${CMAKE_CURRENT_LIST_DIR}/ossl_md5.cc)
add_test(examples.0005.sha.ossl_md5 examples.0005.sha.ossl_md5)
add_executable(examples.0005.sha.ossl_sha1 ${CMAKE_CURRENT_LIST_DIR}/ossl_sha1.cc)
add_test(examples.0005.sha.ossl_sha1 examples.0005.sha.ossl_sha1)
add_executable(examples.0005.sha.ossl_sha256 ${CMAKE_CURRENT_LIST_DIR}/ossl_sha256.cc)
add_test(examples.0005.sha.ossl_sha256 examples.0005.sha.ossl_sha256)
add_executable(examples.0005.sha.ossl_sha512 ${CMAKE_CURRENT_LIST_DIR}/ossl_sha512.cc)
add_test(examples.0005.sha.ossl_sha512 examples.0005.sha.ossl_sha512)
add_executable(examples.0005.sha.sha1 ${CMAKE_CURRENT_LIST_DIR}/sha1.cc)
add_test(examples.0005.sha.sha1 examples.0005.sha.sha1)
add_executable(examples.0005.sha.sha256 ${CMAKE_CURRENT_LIST_DIR}/sha256.cc)
add_test(examples.0005.sha.sha256 examples.0005.sha.sha256)
add_executable(examples.0005.sha.sha512 ${CMAKE_CURRENT_LIST_DIR}/sha512.cc)
add_test(examples.0005.sha.sha512 examples.0005.sha.sha512)
