add_executable(examples__0006.file_io__count_all_spaces_in_file.cc count_all_spaces_in_file.cc)
add_test(examples__0006.file_io__count_all_spaces_in_file.cc examples__0006.file_io__count_all_spaces_in_file.cc)
add_executable(examples__0006.file_io__file_loader.cc file_loader.cc)
add_test(examples__0006.file_io__file_loader.cc examples__0006.file_io__file_loader.cc)
add_executable(examples__0006.file_io__file_loader_options.cc file_loader_options.cc)
add_test(examples__0006.file_io__file_loader_options.cc examples__0006.file_io__file_loader_options.cc)
add_executable(examples__0006.file_io__ibuf_file.cc ibuf_file.cc)
add_test(examples__0006.file_io__ibuf_file.cc examples__0006.file_io__ibuf_file.cc)
add_executable(examples__0006.file_io__obuf_file.cc obuf_file.cc)
add_test(examples__0006.file_io__obuf_file.cc examples__0006.file_io__obuf_file.cc)
add_executable(examples__0006.file_io__utf8_to_utf16.cc utf8_to_utf16.cc)
add_test(examples__0006.file_io__utf8_to_utf16.cc examples__0006.file_io__utf8_to_utf16.cc)
